apps/nightingale-heartaware/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartaware-frontend
  namespace: nightingale-heartaware
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: heartaware-frontend
  template:
    metadata:
      labels:
        app: heartaware-frontend
    spec:
      
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: heartaware-frontend
          image: ghcr.io/curatimexai/nightingale-heartaware-frontend:d8119dab41a49147a248e69c9de492262d69c79c
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
