apps/nightingale-heartaware/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heartaware-ingress
  namespace: nightingale-heartaware
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - heartaware.test.nightingaleheart.com
      secretName: heartaware-tls
  rules:
    - host: heartaware.test.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heartaware-frontend-service
                port:
                  number: 80
